kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planning-poker
  namespace: planning-poker
spec:
  ports:
    - port: 80
      targetPort: 4000
      name: http
      protocol: TCP
    - port: 443
      targetPort: 4001
      name: https
      protocol: TCP
  selector:
    app: planning-poker
